# CLI

./: .gitignore  Cargo.toml  LICENSE  README.md  SystemIndo.json  install.sh  kali  package-lock.json
src/: main.rs
src/commands/: command.rs  dl.rs  extractLinks.rs  extractlinks.rs  mod.rs  monitoring.rs  scan_sys.rs  tui.rs
src/commands/config/: conf.rs
src/commands/download/: dl_module.rs
src/commands/mod_screen/: codemod.rs  gamemod.rs  mod.rs
src/commands/module/: deepsearch.rs  mScan_rn.rs  mod.rs  test_module.rs
src/scripts/: git.sh  gmail.sh  notif.sh  youtube.music.sh
