[package]
name = "dex"
version = "0.1.0"
edition = "2021"
authors = ["dex0o0"]
license = "MIT"
description = "a cool cli for linux users"

[[bin]]
name = "dex"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5.66"
colored = "3.0"
dirs = "6.0"
env = "1.0"
fs2 = "0.4.3"
futures-util = "0.3"          
indicatif = "0.17"              
machine-info = "1.0"
memory-stats = "1.2"
regex = "1.12"
reqwest = { version = "0.11", features = ["rustls-tls", "stream"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tabled = { version = "0.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
